// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/components/AuditResultMessage/ResultIconRender render auditing tag when isAuditing is truthy 1`] = `
<body>
  <div>
    <span
      class="ant-tag ant-tag-geekblue basic-tag-wrapper basic-small-tag-wrapper css-sdwkac css-dev-only-do-not-override-txh9fw"
    >
      审核中
    </span>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage/ResultIconRender render icon when has diff icon 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <svg
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <svg
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.28 2.084 4.637 4.638v6.558l-4.638 4.638H6.721L2.083 13.28V6.722l4.638-4.638zM9.165 12.5v1.667h1.667V12.5zm0-6.666v5h1.667v-5z"
            fill="#6094FC"
          />
        </svg>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 16 16"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
            fill="#EBAD1C"
          />
        </svg>
      </div>
      <div
        class="ant-space-item"
      >
        <svg
          height="20"
          viewBox="0 0 16 16"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
            fill="#F66074"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage/ResultIconRender render icon when has same icon 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <svg
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <svg
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.28 2.084 4.637 4.638v6.558l-4.638 4.638H6.721L2.083 13.28V6.722l4.638-4.638zM9.165 12.5v1.667h1.667V12.5zm0-6.666v5h1.667v-5z"
            fill="#6094FC"
          />
        </svg>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 16 16"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
            fill="#EBAD1C"
          />
        </svg>
      </div>
      <div
        class="ant-space-item"
      >
        <svg
          height="20"
          viewBox="0 0 16 16"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
            fill="#F66074"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage/ResultIconRender render normal icon when iconLevels is undefined 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
      >
        <svg
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage/ResultIconRender render normal icon when no icon data 1`] = `
<body>
  <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
      >
        <svg
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;
